added ability for user to add new toDo item - ajax mode; also made the reply form in forums section appear on the last page of the show post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -74,13 +74,14 @@
 		</div>
 
 		
-
-		<div>
-			<h4> Reply to Thread </h4>
-			<div id="comment-form">
-				<%= render  'comments/form'%>
+		<% if @comments.total_pages == @comments.current_page %>
+			<div>
+				<h4> Reply to Thread </h4>
+				<div id="comment-form">
+					<%= render  'comments/form'%>
+				</div>
 			</div>
-		</div>
+		<% end %>
 	</div>	
 	
 </div>
