--- a/app/assets/stylesheets/user_todo_items.scss
+++ b/app/assets/stylesheets/user_todo_items.scss
@@ -46,24 +46,26 @@
 .checklist-container {
 	width: 30%;
 	max-width: 750px;
-	background: rgba(255,255,255,0.95);
+	background: rgba(	21, 155, 238,0.4);
 	margin: 3em auto 0 auto;
 	border-radius: 7px;
 	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
 	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
 	padding: 1em 0;
 	font-size: 1.2em;
+
 }
 
 
 body {
  	height: 100%;
+ 	/*
  	background: -webkit-linear-gradient( 40deg, #f1f9fe 20%,  #fdfdf8 100%);
  	background:    -moz-linear-gradient(40deg, #f1f9fe 20%, #fdfdf8 100%);
   background:     -ms-linear-gradient(40deg, #f1f9fe 20%, #fdfdf8 100%);
   background:      -o-linear-gradient(40deg, #f1f9fe 20%, #fdfdf8 100%);
   background:         linear-gradient(40deg, #f1f9fe 20%, #fdfdf8 100%);
-  /*background: -webkit-linear-gradient(40deg, #b5f1f8 10%, #fafbf2 100%);
+  background: -webkit-linear-gradient(40deg, #b5f1f8 10%, #fafbf2 100%);
   background:    -moz-linear-gradient(40deg, #b5f1f8 10%, #fafbf2 100%);
   background:     -ms-linear-gradient(40deg, #b5f1f8 10%, #fafbf2 100%);
   background:      -o-linear-gradient(40deg, #b5f1f8 10%, #fafbf2 100%);
@@ -71,5 +73,8 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.completed-todo-item {
+	text-decoration: line-through;
+}
 
 
