--- a/app/views/user_todo_items/index.html.erb
+++ b/app/views/user_todo_items/index.html.erb
@@ -4,9 +4,9 @@
 <div class="checklist-container col-xs-12 col-lg-3", style="margin-right: 10px;">
 
 	<div class="panel-group">
-		<div class="panel", style="text-align: center;">
+		<div class="panel panel-body">
 
-			<h4> <i class="fa fa-list-ul"></i> My Checklist </h4>
+			<h3> <i class="fa fa-list-ul"></i> My Checklist </h3>
 			
 		</div>
 		<br>
@@ -29,37 +29,11 @@
 <div class=" checklist-container col-xs-12 col-lg-9">
 	
 		<div class="panel-group", id="all-items">
-			<h1> Remaining To-Dos </h1>
+			<h1 style="color: white;"> Remaining To-Dos </h1>
 			<ul id="remaining-items-list">
-			<% @user_todo_items.each do |t| %>
-				<li class="panel panel-heading , remaining-todo-item", id=<%= dom_id(t)%> >
-					<div class="todoContent">
-						<%= link_to '<i class="fa fa-check"></i>'.html_safe, complete_user_todo_item_path(t.id), class: "check-but", method: :patch, remote: true  %>
-							
-						<%= t.item %> 
-					</div>
-				</li>
-				<!--
-				<%if t.completed? %>
-						<div class="completed row clearfix" , id=<%= dom_id(t)%> >
-						<i style = "opacity: 0.4;" class ="fa fa-check"> </i>
-						<%= t.item %> 
-						
-						<%= link_to "Reset", reset_user_todo_item_path(t.id), method: :patch, remote: true %>
-						</div>
-						
-				<% else %>
-						<div class = "row clearfix", id=<%= dom_id(t)%>>
-						<%= link_to complete_user_todo_item_path(t.id), method: :patch, remote: true do %>
-							<i class="fa fa-check"></i>
-						<% end %>
-
-						<%= t.item %> 
-
-						</div>					
-				<% end %>
-				-->
-			<% end %>
+			<%= render @user_todo_items %> 
+				
+			
 
 			</ul>
 
@@ -69,15 +43,21 @@
 		
 		<!-- completed items -->
 		<div class="panel-group", id="completed-items-panel", style="display:none;">
-			<h1> Completed Items </h1>
+			<h1 style="color: white;"> Completed Items </h1>
 			<ul id="completed-items">
 				<% @completed_user_todo_items.each do |t| %>
 					
 					<li class="panel panel-heading completed-todo-item", id=<%= dom_id(t)%> >
 						<div class="completedTodoContent">
 							<div class='completed-todo-item' >
-							<i style = "opacity: 0.4;" class ="fa fa-check"> </i>
-							<%= t.item %> 
+								<i style = "opacity: 0.4;" class ="fa fa-check"> </i>
+								<%= t.item %> 
+
+								<ul class="list-inline panel-actions", style="text-align: right;margin-top: -25px;margin-bottom: 0;">
+									<li>
+										<%= link_to '<i class="fa fa-undo resetIcon", style="margin-right:5px;", data-toggle="tooltip" title="Restore"> </i> '.html_safe, reset_user_todo_item_path(t.id), method: :patch, remote: true  %>
+									</li>
+								</ul>
 							</div>
 						</div>
 					</li>
@@ -98,6 +78,6 @@
 		<br>
 		<br>
 
-		footer??
+		global footer??
 
 </div>
