--- a/app/views/page/listings.html.erb
+++ b/app/views/page/listings.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <form>
+            <form action="/page/listings" method="get">
                 <div class="panel-group" id="accordion">
-                    <div class="panel panel-info">
+                    <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapseCategory">
                             <h4 class="panel-title accordion-toggle">Category</h4>
                         </div>
@@ -11,7 +11,7 @@
                             <div class="panel-body">
                             	
 								<div>
-									<input type="checkbox" id="allCategories">
+									<input type="checkbox" id="allCategories" name="allCategoriesCheckbox">
 									<label for="allCategories">
                                         All Categories
                                     </label>
@@ -19,17 +19,18 @@
 								
 								<% @categories.each do |category| %>
 								<div>
-									<input type="checkbox" id="<%= category.name %>">
+									<%= check_box_tag("categoryCheckbox[]",category.id, false, class: "categoryCheckbox") %> <%= category.name %>
+									<!--input type="checkbox" id="categoryCheckbox" name="categoryCheckbox" class="categoryCheckbox" value="<%= category.id %>">
 									<label for="<%= category.name %>">
                                         <%= category.name %>
-                                    </label>
+                                    </label-->
 								</div>	
 								<% end %>
 								
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-info">
+                    <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapsePrice">
                             <h4 class="panel-title accordion-toggle">Price</h4>
                         </div>
@@ -39,7 +40,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-info">
+                    <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapseLocation">
                             <h4 class="panel-title accordion-toggle">Location</h4>
                         </div>
@@ -55,23 +56,24 @@
 								
 								<% @locations.each do |location| %>
 								<div>
-									<input type="checkbox" id="<%= location.name %>">
+									<%= check_box_tag("locationCheckbox[]",location.name, false, class: "locationCheckbox") %> <%= location.name %>
+									<!--input type="checkbox" id="<%= location.name %>" class="locationCheckbox">
 									<label for="<%= location.name %>">
                                         <%= location.name %>
-                                    </label>
+                                    </label-->
 								</div>	
 								<% end %>
 								
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-info">
+                    <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapseSearch">
                             <h4 class="panel-title accordion-toggle">Search</h4>
                         </div>
                         <div id="collapseSearch" class="panel-collapse collapse in">
                             <div class="panel-body">
-                                <input type="search" placeholder="hanapin dito..."><input type="submit" class="btn btn-info" value="Submit">
+                                <input type="search" id="details" name="details" placeholder="Enter details..."><input type="submit" class="btn btn-info" value="Submit">
                             </div>
                         </div>
                     </div>
@@ -106,20 +108,6 @@
 			                        <%= vendor.address %>&nbsp;</p>
 								<div class="textellipsis"><%= vendor.emailAddress %>&nbsp;</div>
 								<div class="textellipsis"><%= vendor.websiteUrl %>&nbsp;</div>
-								<br>
-								<!--div>
-		                            <div class="ratings">
-				                        <p class="pull-right">3 reviews</p>
-				                        <p>
-				                            <span class="glyphicon glyphicon-star"></span>
-				                            <span class="glyphicon glyphicon-star"></span>
-				                            <span class="glyphicon glyphicon-star"></span>
-				                            <span class="glyphicon glyphicon-star"></span>
-				                            <span class="glyphicon glyphicon-star-empty"></span>
-				                            4.0 stars
-				                        </p>
-				                    </div>
-		                        </div-->
 								<br>
 			                    <div class="row">
 			                    	<div class="col-xs-12 col-md-4 col-lg-4">
