added stats and add remove option

--- a/app/assets/stylesheets/user_todo_items.scss
+++ b/app/assets/stylesheets/user_todo_items.scss
@@ -73,8 +73,11 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-.completed-todo-item {
-	text-decoration: line-through;
+.checklist-container  {
+	a {
+		text-decoration:none !important; 
+	}
 }
+
 
 
