--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -48,7 +48,10 @@
 
     <!--<div class="jumbotron">-->
       <div class="container text-center" style="margin-top: 20px;">
-        <%= image_tag("heap_logo2.jpg", :alt => "Happily Ever After Ph") %>
+        <div class="col-xs-6 col-xs-offset-3">
+
+        <%= image_tag("heap_logo2.jpg", :alt => "Happily Ever After Ph", :class => "img-responsive") %>
+        </div>
         <!--<h2 style="font: ">Happily Ever After Ph</h2>-->
       </div><!-- End container -->
     <!--</div>--><!-- End jumbotron-->
