--- a/app/views/page/listings.html.erb
+++ b/app/views/page/listings.html.erb
@@ -116,7 +116,8 @@
 			                            &nbsp;
 			                        </div>
 			                    	<div class="col-xs-12 col-md-4 col-lg-4">
-			                            <a class="btn btn-success" href="#">Add to Checklist</a>
+			                            <!-- <a class="btn btn-success" href="#">Add to Checklist</a> -->
+			                            &nbsp;
 			                        </div>
 			                    </div>
 			                </div>
@@ -125,7 +126,8 @@
 					<% end %>		
 				</div>
 			
-			<%= will_paginate @vendors, renderer:BootstrapPagination::Rails, previous_label:"<<", next_label:">>", inner_window:1, outer_window:0%>
+		<div><%= will_paginate @vendors, renderer:BootstrapPagination::Rails, previous_label:"<<", next_label:">>", inner_window:3, outer_window:0%>
+			</div>
         </div>
     </div>
 </div>
