commented out price filter for now

--- a/app/views/page/listings.html.erb
+++ b/app/views/page/listings.html.erb
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel panel-default">
+                    <!-- <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapsePrice">
                             <h4 class="panel-title accordion-toggle">Price</h4>
                         </div>
@@ -40,7 +40,7 @@
                                 <input type="text" name="price" data-provide="slider" data-slider-min="1" data-slider-max="999999999" data-slider-step="1" data-slider-value="999999999" data-slider-tooltip="show">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="panel panel-default">
                         <div class="panel-heading" data-toggle="collapse" data-target="#collapseLocation">
                             <h4 class="panel-title accordion-toggle">Location</h4>
