--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,7 @@
     visibility: visible;
 }
 
+
 .dropdown:hover .dropdown-menu {
     display: block;
 	-webkit-border-radius: 5px 5px 5px 5px ;
@@ -49,6 +50,7 @@
 	border-left: 1px solid #9c9c9c;
 	border-right: 1px solid #9c9c9c;
 }
+
 
 .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
     margin-top: 0;
@@ -81,10 +83,10 @@
 	display: inline-block;
 }
 
-/*
+
 .nav navbar-nav li {
 	display: inline-block;
-}*/
+}
 
 .jumbotron {
 	background-color: #fff;
