--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,14 +9,14 @@
 	<div class = "row">
 		<div class = "col-md-12">
 			<div class = "panel panel-default">
-				<div class= "panel-heading"> Test </div>
+				<div class= "panel-heading"> <h4> All Topics </h4> </div>
 				<table class = "table table-hover">
 					<thead> 
 						<tr>
 							<th class="hidden-xs topic-marker"> </th>
 							<th> Title </th>
 							<th class ="text-right"> Replies </th>
-							<th class ="hidden-xs"> Latest Post Info </th>
+							<th class ="hidden-xs"> Latest Reply</th>
 						</tr>
 
 					</thead>
@@ -37,7 +37,14 @@
 							</td>
 
 							<td class="col-md-1 text-right"> <%= p.comments.count %> </td>
-							<td class="col-md-4 hidden-xs"> <%= time_ago_in_words(p.comments.last.created_at ) unless p.comments.empty? %></td>
+							<td class="col-md-4 hidden-xs">
+								<div>  <%= time_ago_in_words(p.comments.last.created_at ) + ' ago' unless p.comments.empty? %>
+								</div>
+
+								<small class="text-muted"> <%= p.comments.last.user.email unless p.comments.empty? %> </small>
+
+
+							</td>
 						</tr>
 						<% end %>
 
