--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,364 +12,13 @@
  *
  *= require_tree .
  *= require_self
+ *= require Raleway/bootstrap.min
+ *= require Raleway/style
+ *= require Raleway/font-awesome
+ *= require Raleway/ionicons.min
+ *= require Raleway/bootstrap-social
  */
 
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
-.sidebar-nav {
-    padding: 9px 0;
-}
-
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
-}
-
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
-}
-
-
-.dropdown:hover .dropdown-menu {
-    display: block;
-	-webkit-border-radius: 5px 5px 5px 5px ;
-    -moz-border-radius: 5px 5px 5px 5px ;
-    border-radius: 5px 5px 5px 5px ;    
-    background-color: 000;  
-    margin-top: -3px;
-    margin-left: 0px;
-    border: none;
-    width: 200px;
-	border-top: 1px solid #9c9c9c;
-	border-bottom: 1px solid #9c9c9c;
-	border-left: 1px solid #9c9c9c;
-	border-right: 1px solid #9c9c9c;
-}
-
-
-.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
-    margin-top: 0;
-}
-
-.navbar .sub-menu:before {
-    border-bottom: 7px solid transparent;
-    border-left: none;
-    border-right: 7px solid rgba(0, 0, 0, 0.2);
-    border-top: 7px solid transparent;
-    left: -7px;
-    top: 10px;
-}
-.navbar .sub-menu:after {
-    border-top: 6px solid transparent;
-    border-left: none;
-    border-right: 6px solid #fff;
-    border-bottom: 6px solid transparent;
-    left: 10px;
-    top: 11px;
-    left: -6px;
-}
-
-.nav .dropdown-toggle .caret { 
-	display:none; 
-}
-
-.navbar-nav {
-	text-align: left; 
-	display: inline-block;
-}
-
-
-.nav navbar-nav li {
-	display: inline-block;
-}
-
-.jumbotron {
-	background-color: #fff;
-	height: 120px;
-}
-
-.navbar .navbar-inverse {
-    background-color: #fff;
-    border-color: #337ab7;
-	border-top: 1px solid #9c9c9c;
-	border-bottom: 1px solid #9c9c9c;
-	border-left: none;
-	border-right: none;
-}
-
-.dropdown {
-	color: #000;
-}
-
-.navbar-inverse .navbar-nav>li>a:hover {
-    color: #337ab7;
-    background-color: transparent;
-}
-
-.navbar-inverse .navbar-nav>li>a:visited {
-    color: #337ab7;
-    background-color: transparent;
-}
-
-.navbar-inverse .navbar-nav>li>a {
-    color: #525252;
-}
-
-.panel panel-primary {
-	border-color: #63A0B8;
-}
-
-.panel-primary>.panel-heading {
-	border-color: #63A0B8;
-	background-color: #63A0B8;
-}
-
-#myNavbar {
-    background-color: #fff;
-    border-color: #337ab7;
-    border-top: none;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    display: block;
-    margin: 0 auto;
-}
-
-#myNavbar ul {
-    width: 100%;
-    text-align: center;
-}
-
-#myNavbar li {
-    display: inline-block;
-    float: none;
-}
-
-.navbar {
-    margin-bottom: 0px;
-}
-
-#myNavMenu {
-    background-color: #fff;
-    border-top: 0.05px solid #e3e3e3;
-    border-bottom: 0.05px solid #e3e3e3;
-    border-left: none;
-    border-right: none;
-}
-
-.statusBtn { 
-    border-radius: 15% ;
-    width: 40px;
-    padding-left:0;
-    margin: 0 5px;}
-
-
-.sessionBtn {
-    margin: 0 5px;
-}
-
-body{
-        padding-top: 40px;
-        font-family: Lato, arial, sans-serif;
-    }
-
-@import url(http://fonts.googleapis.com/css?family=Roboto);
-
-/****** LOGIN MODAL ******/
-.loginmodal-container {
-  padding: 30px;
-  max-width: 350px;
-  width: 100% !important;
-  background-color: #F7F7F7;
-  margin: 0 auto;
-  border-radius: 2px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
-  font-family: roboto;
-}
-
-.loginmodal-container h1 {
-  text-align: center;
-  font-size: 1.8em;
-  font-family: roboto;
-}
-
-.loginmodal-container input[type=submit] {
-  width: 100%;
-  display: block;
-  margin-bottom: 10px;
-  position: relative;
-}
-
-.loginmodal-container input[type=text], input[type=password] {
-  height: 44px;
-  font-size: 16px;
-  width: 100%;
-  margin-bottom: 10px;
-  -webkit-appearance: none;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
-  padding: 0 8px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-.loginmodal-container input[type=text]:hover, input[type=password]:hover {
-  border: 1px solid #b9b9b9;
-  border-top: 1px solid #a0a0a0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-
-.loginmodal {
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Arial', sans-serif;
-  font-weight: 700;
-  height: 36px;
-  padding: 0 8px;
-/* border-radius: 3px; */
-/* -webkit-user-select: none;
-  user-select: none; */
-}
-
-.loginmodal-submit {
-  /* border: 1px solid #3079ed; */
-  border: 0px;
-  color: #fff;
-  text-shadow: 0 1px rgba(0,0,0,0.1); 
-  background-color: #4d90fe;
-  padding: 17px 0px;
-  font-family: roboto;
-  font-size: 14px;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-}
-
-.loginmodal-submit:hover {
-  /* border: 1px solid #2f5bb7; */
-  border: 0px;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
-  background-color: #357ae8;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-}
-
-.loginmodal-container a {
-  text-decoration: none;
-  color: #666;
-  font-weight: 400;
-  text-align: center;
-  display: inline-block;
-  opacity: 0.6;
-  transition: opacity ease 0.5s;
-} 
-
-.login-help{
-  font-size: 12px;
-}
-
-/****** JOIN MODAL ******/
-.joinmodal-container {
-  padding: 30px;
-  max-width: 350px;
-  width: 100% !important;
-  background-color: #F7F7F7;
-  margin: 0 auto;
-  border-radius: 2px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
-  font-family: roboto;
-}
-
-.joinmodal-container h1 {
-  text-align: center;
-  font-size: 1.8em;
-  font-family: roboto;
-}
-
-.joinmodal-container input[type=submit] {
-  width: 100%;
-  display: block;
-  margin-bottom: 10px;
-  position: relative;
-}
-
-.joinmodal-container input[type=text], input[type=password] {
-  height: 44px;
-  font-size: 16px;
-  width: 100%;
-  margin-bottom: 10px;
-  -webkit-appearance: none;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
-  padding: 0 8px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-.joinmodal-container input[type=text]:hover, input[type=password]:hover {
-  border: 1px solid #b9b9b9;
-  border-top: 1px solid #a0a0a0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-
-.joinmodal {
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Arial', sans-serif;
-  font-weight: 700;
-  height: 36px;
-  padding: 0 8px;
-/* border-radius: 3px; */
-/* -webkit-user-select: none;
-  user-select: none; */
-}
-
-.joinmodal-submit {
-  /* border: 1px solid #3079ed; */
-  border: 0px;
-  color: #fff;
-  text-shadow: 0 1px rgba(0,0,0,0.1); 
-  background-color: #4d90fe;
-  padding: 17px 0px;
-  font-family: roboto;
-  font-size: 14px;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-}
-
-.joinmodal-submit:hover {
-  /* border: 1px solid #2f5bb7; */
-  border: 0px;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
-  background-color: #357ae8;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-}
-
-.joinmodal-container a {
-  text-decoration: none;
-  color: #666;
-  font-weight: 400;
-  text-align: center;
-  display: inline-block;
-  opacity: 0.6;
-  transition: opacity ease 0.5s;
-} 
-
-.join-help{
-  font-size: 12px;
-}
-
-.page-header {
-    border-bottom: none;
-}
