--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,7 @@
 						<% @posts.each do |p| %>
 						<tr>
 							<td class="hidden-xs topic-marker" > 
-								<i class="fa fa-comments fa-lg">
+								<i class="fa fa-comments fa-lg bordered-icon-color">
 								</i>
 							</td>
 
