--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,17 @@
 											<i class="fa fa-facebook"></i>
 										</a>
 									</li>
-									<li><a data-toggle="modal" data-target="#login">Login</a></li>		 
-									<li><a href="pages-forms-register-login.html">Register</a></li>
+
+									<% if user_signed_in? %>
+
+										<li>
+          					<%= link_to "Log Out", destroy_user_session_path , :method => :delete %>
+        						<% else %>
+        						<li>
+										<li><a data-toggle="modal" data-target="#login">Login</a></li>		 
+										<!--li><a href="pages-forms-register-login.html">Register</a></li-->
+										<li><a data-toggle="modal" data-target="#register">Register</a></li>	
+									<% end %>
 								</ul>
 							</div>
 						</div><!--/row --> 
@@ -41,29 +50,45 @@
 				                <h4 class="modal-title" id="loginLabel">Login</h4>
 				            </div>
 				            <div class="modal-body">
-					            <form role="form">
+
+				            
+            
+                  
+            
+            
+          
+
+					            <%= simple_form_for(:user, :url => session_path(:user)) do |f| %>
 						            <div class="form-group">
-						                <label for="exampleInputEmail1">Email address</label>
-						                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" autofocus>
+						                
+						                <%= f.input :email , autofocus: true, class: "form-control", placeholder: "Enter email" , required: true %>
+
 						            </div>
 						            <div class="form-group">
-						                <label for="exampleInputPassword1">Password</label>
-						                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						                
+						                <%= f.input :password , class: "form-control", placeholder: "Password" , required: true %>
 						            </div>
 						            <div class="checkbox">
 						                <label>
 						                    <input type="checkbox"> Remember Me
 						                </label>
 						            </div>
-						        </form><!-- /form -->
+						        
 				            </div>
 				            <div class="modal-footer">
-				                <button type="button" class="btn btn-rw btn-primary">Login</button>
+				                
+				                <%= f.submit "Login", :class => "btn btn-rw btn-primary"  %>
+				                <%= link_to "Forgot your password?", new_password_path(:user) %>
+
 				            </div>
+				            <% end %>
+				            	<!-- /form -->
 				        </div><!-- /modal content -->
 				    </div><!-- /modal dialog -->
 				</div><!-- /modal holder -->
 				<!-- End Login -->
+
+				<%= render partial: "devise/register_login" %>
 
 		     
 
