--- a/app/views/user_todo_items/index.html.erb
+++ b/app/views/user_todo_items/index.html.erb
@@ -68,7 +68,7 @@
 
 								<ul class="list-inline panel-actions", style="text-align: right;margin-top: -25px;margin-bottom: 0;">
 									<li>
-										<%= link_to '<i class="fa fa-undo resetIcon", style="margin-right:5px;", data-toggle="tooltip" title="Restore"> </i> '.html_safe, reset_user_todo_item_path(t.id), method: :patch, remote: true  %>
+										<%= link_to '<i class="fa fa-undo resetIcon", style="margin-right:5px;", data-toggle="tooltip" title="Restore"> </i> '.html_safe, reset_user_todo_item_path(t.id), method: :put, remote: true  %>
 									</li>
 								</ul>
 							</div>
@@ -86,13 +86,6 @@
 
 </div>
 
-<div class="container col-md-6 col-md-offset-3">
 
-		<br>
-		<br>
-
-		global footer??
-
-</div>
 
 </div>
