--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -12,7 +12,7 @@
 
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js' %>
+  <%= javascript_include_tag 'https://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js' %>
   
   <%= csrf_meta_tags %>
 
@@ -20,8 +20,8 @@
 
   <!-- Stylesheets -->
   
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <%= stylesheet_link_tag( 'http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700%7CRaleway:200,300,400,700' ) %>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <%= stylesheet_link_tag( 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700%7CRaleway:200,300,400,700' ) %>
 
 
 
