--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -6,9 +6,9 @@
 								<div class="col-sm-12 column-header">
 									<div class="navbar-header">
 										<!-- Brand -->
-										<a href="index.html" class="navbar-brand">
-											<div class="css-logo"></div> <img src="images/heap_logo2.jpg" class="raleway-logo" alt="HEAP">
-										</a>
+										<%= link_to '<div class="css-logo"></div> <img src="images/heap_logo2.jpg" class="raleway-logo" alt="HEAP">'.html_safe, root_path, :class => "navbar-brand"  %>
+
+
 										<!-- Mobile Navigation -->
 										<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 								            <span class="sr-only">Toggle navigation</span>
@@ -206,33 +206,9 @@
 									        	</ul>
 									        </li>
 											<li class="dropdown dropdown-main">
-									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Shop<span class="fa fa-angle-down dropdown-arrow"></span></a>
+									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Vendors<span class="fa fa-angle-down dropdown-arrow"></span></a>
 									        	<ul class="dropdown-menu dropdown-subhover dropdown-animation animated fadeIn"><!-- Control Animations by changing "fadeIn" to another property from animate.css, check animations page in features / ALSO dropdown-animation class controls the duration, ajust if need -->
-										            <li class="dropdown dropdown-submenu">
-											    		<a class="trigger">Home Pages</a>
-												    	<ul class="dropdown-menu animated fadeIn dropdown-animation">
-												    		<li><a tabindex="-1" href="shop-home-revolution-slider.html">Revolution Slider</a></li>
-												    		<li><a tabindex="-1" href="shop-home-bootstrap-slider.html">Bootstrap Slider</a></li>
-												    	</ul>
-													</li>
-										            <li class="dropdown dropdown-submenu">
-											    		<a class="trigger">Layouts</a>
-												    	<ul class="dropdown-menu animated fadeIn dropdown-animation">
-															<li><a tabindex="-1" href="shop-layouts-2col.html">2 Columns</a></li>
-												    		<li><a tabindex="-1" href="shop-layouts-3col.html">3 Columns</a></li>
-												    		<li><a tabindex="-1" href="shop-layouts-4col.html">4 Columns</a></li>
-												    	</ul>
-													</li>
-										            <li class="dropdown dropdown-submenu">
-											    		<a class="trigger">Checkout</a>
-												    	<ul class="dropdown-menu animated fadeIn dropdown-animation">
-												    		<li><a tabindex="-1" href="shop-checkout-1.html">Step 1: Shipping</a></li>
-												    		<li><a tabindex="-1" href="shop-checkout-2.html">Step 2: Payment</a></li>
-												    		<li><a tabindex="-1" href="shop-checkout-3.html">Step 3: Review</a></li>
-												    	</ul>
-													</li>
-										            <li><a href="shop-single-product.html">Single Product</a></li>
-										            <li><a href="shop-cart.html">Cart</a></li>
+										         
 										            <li> <%= link_to "See all categories", page_listings_path %> </li>
 									        	</ul>
 									        </li>
@@ -244,73 +220,31 @@
 									            	<li><a href="blog-posts-fullwidth.html">Full Width</a></li>
 									            	<li><a href="blog-posts-grid.html">Grid</a></li>
 									            	<li><a href="blog-single-post.html">Single Post</a></li>
-									            	<% if user_signed_in? %>
-												    			<li><%= link_to "My Checklist", user_todo_items_path%></li>
-												    		<% end %>
-									            	<li><%= link_to "All", posts_path %> </li> 
+									        	</ul>
+									        </li>
+									    <li class="dropdown dropdown-main">
+									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">My HEAP<span class="fa fa-angle-down dropdown-arrow"></span></a>
+									        	<ul class="dropdown-menu dropdown-subhover dropdown-animation animated fadeIn"><!-- Control Animations by changing "fadeIn" to another property from animate.css, check animations page in features / ALSO dropdown-animation class controls the duration, ajust if need -->
+												    		<li><%= link_to "My Checklist", user_todo_items_path%></li>
+												    		<li><%= link_to "Forums", posts_path %> </li> 
+												    		
 									        	</ul>
 									        </li>
 											<li class="dropdown hidden-sm hidden-xs">
-						                    	<a href="#" class="ml10 nav-circle-li dropdown-toggle dropdown-form-toggle" data-toggle="dropdown"><i class="fa fa-shopping-cart"></i></a>
-						                        <ul class="fadeInUp-animated dropdown-menu dropdown-menu-user cart">
-						                            <li id="dropdownForm">
-						                            	<div class="dropdown-form">
-															<table class="table table-hover no-margin">
-																<thead>
-																	<tr>
-																		<th class="quantity">QTY</th>
-																		<th class="product">Product</th>
-																		<th class="amount">Subtotal</th>
-																	</tr>
-																</thead>
-																<tbody>
-																	<tr>
-																		<td class="quantity">2 x</td>
-																		<td class="product"><a href="shop-product.html">IPhone 6s</a><span class="small">32GB 10.0 Megapixel</span></td>
-																		<td class="amount">$700.00</td>
-																	</tr>
-																	<tr>
-																		<td class="quantity">3 x</td>
-																		<td class="product"><a href="shop-product.html">G10 Macbook Toaster</a><span class="small">Quad Core 5GB</span></td>
-																		<td class="amount">$500.00</td>
-																	</tr>
-																	<tr>
-																		<td class="quantity">3 x</td>
-																		<td class="product"><a href="shop-product.html">Desktop Seagul</a><span class="small">1 Foot Tall - 2FT Wingspan</span></td>
-																		<td class="amount">$1500.00</td>
-																	</tr>
-																	<tr>
-																		<td class="total-quantity" colspan="2">Total 8 Items</td>
-																		<td class="total-amount">$3000.00</td>
-																	</tr>
-																	<tr>
-																		<td class="text-right" colspan="3">
-																			<a href="shop-cart.html"><button class="btn btn-rw btn-primary btn-sm">View your cart</button></a>
-																			<a href="shop-checkout-1.html"><button class="btn btn-rw btn-primary btn-sm">Checkout</button></a>
-																		</td>
-																	</tr>
-																</tbody>
-															</table>
-						                                </div><!-- /dropdown form -->  
-						                            </li><!-- /dropdownForm list item -->  
-						                        </ul><!-- /cart dropdown -->
-						                	</li><!-- /cart navbar list item -->
-											<li class="dropdown hidden-sm hidden-xs">
-						                    	<a href="#" class="ml10 nav-circle-li dropdown-toggle dropdown-form-toggle" data-toggle="dropdown"><i class="fa fa-search"></i></a>
-						                        <ul class="fadeInRight-animated dropdown-menu dropdown-menu-user">
-						                            <li id="dropdownForm">
-						                            	<div class="dropdown-form">
-						                                	<form class="form-default form-inline p15">
-						                                        <div class="input-group">
-						                                            <input type="text" class="form-control search-input" placeholder="Search...">
-						                                            <span class="input-group-btn">
-						                                                <button class="btn btn-rw btn-primary search-btn" type="button">Go!</button>
-						                                            </span>
-						                                    </form><!-- /searh form -->  
-						                                </div><!-- /dropdown form -->  
-						                            </li><!-- /dropdownForm list item -->  
-						                        </ul><!-- /search dropdown -->
-						                	</li><!-- /search navbar list item --> 
+						              <a href="#" class="ml10 nav-circle-li dropdown-toggle dropdown-form-toggle" data-toggle="dropdown"><i class="fa fa-search"></i></a>
+						                 <ul class="fadeInRight-animated dropdown-menu dropdown-menu-user">
+						                    <li id="dropdownForm">
+						                        <div class="dropdown-form">
+						                          <%= search_form_for @q, :class => "form-default form-inline p15", url: search_vendors_path, method: :post do |f| %>
+						                               <div class="input-group">
+            																	<%= f.text_field :name_or_address_cont, class: "form-control search-input", placeholder: "Search..." %>
+              																<span class="input-group-btn"> <%= f.submit "Go!", :class =>"btn btn-rw btn-primary search-btn" %> </span>
+          														<% end %>
+																			<!-- /searh form -->  
+						                        </div><!-- /dropdown form -->  
+						                    </li><!-- /dropdownForm list item -->  
+						                  </ul><!-- /search dropdown -->
+						          </li><!-- /search navbar list item --> 
 										</ul><!-- /navbar right -->  
 									</nav><!-- /nav -->
 								</div>
