--- a/app/views/page/listings.html.erb
+++ b/app/views/page/listings.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="mt40 mb40">
+  <div class="container">
     <div class="row">
         <div class="col-md-3">
         	<%= form_tag("/page/search", method: "post") do %>
@@ -130,4 +131,5 @@
 			</div>
         </div>
     </div>
+</div>
 </div>
