--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,7 +26,7 @@
 						<% @posts.each do |p| %>
 						<tr>
 							<td class="hidden-xs topic-marker" > 
-								<i class="fa fa-comments fa-lg bordered-icon-color">
+								<i class="fa fa-comments-o fa-lg ">
 								</i>
 							</td>
 
