--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 		<div class="boxed">
 			<%= render partial: "layouts/header" %>
 			<%= render partial: "layouts/main_nav" %>
+			<%= render partial: "layouts/breadcrumbs" %>
 	  	<%= yield %>
 	  	<%= render partial: "layouts/footer" %>
 	  </div>
