--- a/app/views/page/_home2.html.erb
+++ b/app/views/page/_home2.html.erb
@@ -21,18 +21,6 @@
 
 							<%= image_tag("Wedding1.jpg", alt: "test", height: '800', width: '1732' , style: "background-color:#000;") %>
 
-							<div class="tp-caption color-main fa fa-adn"
-							data-x="center"
-							data-y="105"
-							data-speed="600"
-							data-start="1200"
-							data-end="9400"
-							data-endspeed="600"
-							data-transform_idle="o:1;"
-							data-transform_in="y:10px;opacity:0;s:700;e:Power3.easeOut;"
-							data-transform_out="y:10px;opacity:0;s:500;e:Power2.easeInOut;"
-							style="font-family:'FontAwesome';font-size:71px;">
-							</div>
 
 							<div class="tp-caption"
 							data-x="center"
@@ -45,7 +33,7 @@
 							data-transform_in="y:50px;opacity:0;s:700;e:Power3.easeOut;"
 							data-transform_out="y:50px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="padding: 0px 3px; font-size: 46px; visibility: visible; border-bottom:2px solid rgba(255, 255, 255, 0.24); color:#fff; font-family: 'Raleway' sans-serif;">
-							Welcome to <span class="heavy">Raleway</span>.
+							Welcome to <span class="heavy">Happily Ever After Ph</span>.
 							</div>
 							
 							<div class="tp-caption"
@@ -59,7 +47,11 @@
 							data-transform_in="y:150px;opacity:0;s:700;e:Power3.easeOut;"
 							data-transform_out="y:150px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="padding: 0px 3px; font-size: 24px; visibility: visible; color:#e0e0e0; font-family: 'Open Sans' sans-serif; text-align:center;">
-							<p>Raleway is a responsive template perfect for any web project, with over <br>100+ pages of features, components, and pages.</p>
+							<p>
+								Your Online Resource For All
+								<br>
+								Your Wedding Needs.
+							</p>
 							</div>
 
 						</li>
@@ -92,7 +84,7 @@
 							data-transform_in="y:10px;opacity:0;s:700;e:Power3.easeOut;"
 							data-transform_out="y:10px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="color:#fff;font-size:35px;font-family:'Raleway' sans-serif;font-weight:200;border:2px solid #fff;padding:0 17px;">
-							A variety of features, for <strong>various</strong> needs.
+							One-stop Hub for <strong>your wedding</strong> needs.
 							</div>
 
 							<div class="tp-caption background-mainsub" 
@@ -122,7 +114,7 @@
 							data-transform_in="x:130px;opacity:0;s:1200;e:Power3.easeOut;"
 							data-transform_out="y:130px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="color:#fff;font-size:24px;font-family:'Open Sans' sans-serif;font-weight:300;">
-							Fully responsive, on <strong>all</strong> devices.
+							Comprehensive List of Vendors and <strong>Reviews</strong>.
 							</div>
 
 							<div class="tp-caption background-mainsub" 
@@ -152,7 +144,7 @@
 							data-transform_in="x:190px;opacity:0;s:1200;e:Power3.easeOut;"
 							data-transform_out="y:190px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="color:#fff;font-size:24px;font-family:'Open Sans' sans-serif;font-weight:300;">
-							A variety of pages for a multi purpose website.
+							Wedding Inspiration, Online Community, Blogs, and Forums.
 							</div>
 
 							<div class="tp-caption background-mainsub" 
@@ -182,7 +174,7 @@
 							data-transform_in="x:260px;opacity:0;s:1200;e:Power3.easeOut;"
 							data-transform_out="y:260px;opacity:0;s:500;e:Power2.easeInOut;"
 							style="color:#fff;font-size:24px;font-family:'Open Sans' sans-serif;font-weight:300;">
-							Easy to use and customize. + labeled clean code
+							Budget, Checklist, and Guest List Management
 							</div>
 
 							<div class="tp-caption" 
