--- a/app/views/page/_home2.html.erb
+++ b/app/views/page/_home2.html.erb
@@ -12,7 +12,7 @@
 						data-param1="test" 
 						data-rotate="0" 
 						data-slotamount="default" 
-						data-title="Raleway Intro"
+						data-title="HEAP Intro"
 						data-thumb="Wedding1.jpg"
 						data-transition="slideremoveup">
 
