--- a/app/views/page/_home2.html.erb
+++ b/app/views/page/_home2.html.erb
@@ -13,7 +13,7 @@
 						data-rotate="0" 
 						data-slotamount="default" 
 						data-title="HEAP Intro"
-						data-thumb="Wedding1.jpg"
+						data-thumb="/assets/Wedding1.jpg"
 						data-transition="slideremoveup">
 
 							<!-- MAIN IMAGE -->
@@ -66,7 +66,7 @@
 						data-param1="test"
 						data-rotate="0"
 						data-slotamount="default"
-						data-thumb="Wedding2.jpg"
+						data-thumb="/assets/Wedding2.jpg"
 						data-title="Features"
 						data-transition="slideremoveleft">
 
@@ -192,6 +192,7 @@
 							</div>
 
 						</li>
+
 						
 					</ul>
 				</div>
