--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,43 +6,29 @@
 			            <!-- About -->
 			            <div class="col-sm-3">
 			                <div class="heading-footer"><h4>About</h4></div>
-			                <p>Happily Ever After Philippines. Your One Stop Hub For All Your Wedding Needs. </p>
+			                <p>Happily Ever After Philippines. 
+			                <br>
+			                Designed for the Filipino couples
+			                <br>
+			                Weddings Simplified.  
+			                </p>
 			                
 			            </div>
 			            
 			            <!-- Social -->
 			            <div class="col-sm-3 mg25-xs">
 			                <div class="heading-footer"><h4>Social Networks</h4></div>
+			                
 			                <a class="btn btn-social-icon btn-twitter btn-lg">
 			                    <i class="fa fa-twitter"></i>
 			                </a>
-			                <a class="btn btn-social-icon btn-instagram btn-lg">
-			                    <i class="fa fa-instagram"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-facebook btn-lg">
-			                    <i class="fa fa-facebook"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-vimeo btn-lg">
-			                    <i class="fa fa-vimeo-square"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-linkedin btn-lg">
-			                    <i class="fa fa-linkedin"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-google-plus btn-lg">
-			                    <i class="fa fa-google-plus"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-adn btn-lg">
-			                    <i class="fa fa-adn"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-bitbucket btn-lg">
-			                    <i class="fa fa-bitbucket"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-tumblr btn-lg">
-			                    <i class="fa fa-tumblr"></i>
-			                </a>
-			                <a class="btn btn-social-icon btn-flickr btn-lg">
-			                    <i class="fa fa-flickr"></i>
-			                </a>
+			                
+
+			                <%= link_to '<i class="fa fa-instagram"></i>'.html_safe, "https://www.instagram.com/happilyeverafterph", :class => "btn btn-social-icon btn-instagram btn-lg", :target => "_blank"   %>
+			                
+			                <%= link_to '<i class="fa fa-facebook"></i>'.html_safe,  "https://www.facebook.com/happilyeverafterphilppines",:class =>"btn btn-social-icon btn-facebook btn-lg", :target => "_blank" %>
+
+			                
 			            </div>
 			            <!-- Contact -->
 			            <div class="col-sm-3 mg25-xs">
