--- a/app/views/page/_home2.html.erb
+++ b/app/views/page/_home2.html.erb
@@ -5,7 +5,7 @@
 
 						<!-- Slide 1 -->
 						<li data-delay="9000" 
-						data-description="Raleway Bootstrap Template" 
+						data-description="Happily Ever After Philippines" 
 						data-easein="default"
 						data-easeout="default" 
 						data-masterspeed="default" 
