--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
 			                <div class="heading-footer"><h4>About</h4></div>
 			                <p>Happily Ever After Philippines. 
 			                <br>
-			                Designed for the Filipino couples
+			                Designed for the Filipino Couples.
 			                <br>
 			                Weddings Simplified.  
 			                </p>
