--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -67,8 +67,10 @@
 									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">My HEAP<span class="fa fa-angle-down dropdown-arrow"></span></a>
 									        	<ul class="dropdown-menu dropdown-subhover dropdown-animation animated fadeIn"><!-- Control Animations by changing "fadeIn" to another property from animate.css, check animations page in features / ALSO dropdown-animation class controls the duration, ajust if need -->
 												    		<li><%= link_to "My Checklist", user_todo_items_path%></li>
-												    		
-												    		
+												    		<li><a href="#">"My Budget Tracker"</a></li>
+												    		<li><a href="#">"My Guest List"</a></li>
+												    		<li><a href="#">"My Wedding Team"</a></li>
+												    		<li><a href="#">"My Pegs"</a></li>
 									        	</ul>
 									        </li>
 											<li class="dropdown hidden-sm hidden-xs">
