--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -56,21 +56,17 @@
 											<li class="dropdown dropdown-main">
 									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog<span class="fa fa-angle-down dropdown-arrow"></span></a>
 									        	<ul class="dropdown-menu dropdown-subhover dropdown-animation animated fadeIn"><!-- Control Animations by changing "fadeIn" to another property from animate.css, check animations page in features / ALSO dropdown-animation class controls the duration, ajust if need -->
-									            	<li><a href="blog-posts-sidebar-right.html">Sidebar Right</a></li>
-									            	<li><a href="blog-posts-sidebar-left.html">Sidebar Left</a></li>
-									            	<li><a href="blog-posts-fullwidth.html">Full Width</a></li>
-									            	<li><a href="blog-posts-grid.html">Grid</a></li>
-									            	<li><a href="blog-single-post.html">Single Post</a></li>
+									            	<li><%= link_to "All Entries", blogs_path %> </li>
 									        	</ul>
 									    </li>
 									    <li class="dropdown dropdown-main">
 									        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">My HEAP<span class="fa fa-angle-down dropdown-arrow"></span></a>
 									        	<ul class="dropdown-menu dropdown-subhover dropdown-animation animated fadeIn"><!-- Control Animations by changing "fadeIn" to another property from animate.css, check animations page in features / ALSO dropdown-animation class controls the duration, ajust if need -->
-												    		<li><%= link_to "My Checklist", user_todo_items_path%></li>
-												    		<li><a href="#">"My Budget Tracker"</a></li>
-												    		<li><a href="#">"My Guest List"</a></li>
-												    		<li><a href="#">"My Wedding Team"</a></li>
-												    		<li><a href="#">"My Pegs"</a></li>
+												    		<li><%= link_to "Checklist", user_todo_items_path%></li>
+												    		<li><a href="#">Budget Tracker</a></li>
+												    		<li><a href="#">Guest List</a></li>
+												    		<li><a href="#">Wedding Team</a></li>
+												    		<li><a href="#">Pegs</a></li>
 									        	</ul>
 									        </li>
 											<li class="dropdown hidden-sm hidden-xs">
