--- a/app/views/user_todo_items/_new.html.erb
+++ b/app/views/user_todo_items/_new.html.erb
@@ -1,7 +1,26 @@
 <%= simple_form_for @user_todo_item, 
 		:url => url_for(:action => 'create', :controller => 'user_todo_items'),
-   	:method => 'post',
+   	:method => 'post', class: "col-xs-12 col-md-8",
 		remote: true do |f| %>
-	<%= f.input :item, label: 'New To-Do', class: "new-item-input"  %>
-	<%= f.button :submit, 'Add' %>
+	
+	 
+	<%= f.input :item, label: false, :wrapper_html => {class: "input-group"} do %>
+		
+  		<%= f.input_field :item, class: "form-control new-item-input", placeholder: 'New To-Do Item' %>
+  		
+  	<!--span class="add-on"> <button class="btn btn-primary "> Add </button> </span-->
+  	<!--span class="input-group-btn add-on">
+        <!--button class="btn btn-primary" type="submit">Add</button-->
+        <!--%= f.button :submit, 'Add'%>
+        <button class="btn btn-default" type="button">Go!</button>
+   </span-->
+
+   <span class="input-group-btn ">
+    <button class="btn btn-rw btn-primary ml15" type="button"><strong> Add </strong></button>
+  </span>
+  <% end %>
+
+
+
+
 <% end %>
