--- a/app/views/user_todo_items/destroy.js.erb
+++ b/app/views/user_todo_items/destroy.js.erb
@@ -1,5 +1,16 @@
 $("#<%= dom_id(@user_todo_item) %>").remove();
 var num1 = +$("#user-todo-count").text() - 1;
-var num2 = +$("#user-todo-total").text() - 1;
+var num2 = +$("#user-todo-completed").text() ;
+var num3 = +$("#user-todo-total").text() - 1;
+
+
 $("#user-todo-count").text(num1);
-$("#user-todo-total").text(num2);
+$("#user-todo-total").text(num3);
+
+
+	var progressStyle = '<div class="progress-bar progress-bar-primary progress-bar-striped active"  role="progressbar" style="width:';
+	var progressVal = Math.ceil(num2*100.0/(num1 + num2)); 
+	progressStyle += String(progressVal) + "%";
+	progressStyle += '"> </div>';
+	$(".progress-val").text(String(progressVal) + "%").change();
+	$(".progress").html(progressStyle);
