--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -42,7 +42,7 @@
 				  <div class="row">
 
 				    	<!-- from rails -->	
-				    	<% @blogs.each do |b|  unless @blogs.nil? %>
+				    	<% @blogs.each do |b|  %>
 
 				    	
 				    	<div class="col-sm-6">
